add previous/next link

--- a/dressmyteddy/template-membre.fsdl.j2
+++ b/dressmyteddy/template-membre.fsdl.j2
@@ -16,7 +16,7 @@
 	</setfont>
 
 	<restext resid='restext1' size='480,255' orientation='h-ttb-ltr' fontref='setfont1' talign='center'>
-        <text>{{nanimo}} {{partie}} </text>
+        <text>{{nanimo}} {{limb}} {{previous}} {{next}} </text>
 	</restext>
 
 </frogans-fsdl>
